--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,12 @@ __pycache__/*.pyc
 *.ipynb
 *.npy
 *.png
+*.RData
+*.Rhistory
 .eggs
 vame.egg-info
 vame_onur-Nov26-2020
 vame_onur_2-Nov27-2020
 /VAME/
+/.vscode/
+.idea
